# mpc

./: .gitignore  Makefile.am  README.md  build.sh  config.h.in  configure.ac
MPC/: .gitignore  Build.PL  typemap
MPC/lib/: .gitignore  MPC.pm  MPC.xs
MPC/t/: 001_load.t  002_crop.t  003_prio.t
app/: .gitignore  README.icons  appinfo.json.in  depends.js  framework_config.json  index.html  mpc_plugin_appinfo.json  package.properties  run_chromium.sh
app/source/: About.js  Alarm.js  App.js  Controls.js  MPC.css  MainView.js  Playlists.js  Plugin.js  Prefs.js  Queue.js  SearchInput.js  SleepSettings.js  StatusHeader.js  VirtualList.js
archive/: org.gortan.mpc_1.0.0_all.ipk  org.gortan.mpc_1.1.0_all.ipk
include/: mpc_callbacks.h  mpc_plugin.h  mpc_timers.h  pgmpc.h  pgmpc_internals.h
src/: mpc_callbacks.c  mpc_plugin.c  mpc_start_stop.c  mpc_timers.c  pgmpc.c  pgmpc_playlists.c  pgmpc_queue.c  pgmpc_status.c
